--- a/frontend/static/css/forms.css
+++ b/frontend/static/css/forms.css
@@ -88,7 +88,7 @@ label span {
     border-radius: 10px;
     font-size: 0.6rem;
     outline: none;
-    background-color: transparent;
+    background-color: var(--white-color);
 }
 
 .form-group textarea {
