--- a/frontend/templates/components/agency-sidebar.html
+++ b/frontend/templates/components/agency-sidebar.html
@@ -3,9 +3,10 @@
     <ul>
         <li><a href="{{ url_for('agency_dashboard') }}">Dashboard</a></li>
         <li><a href="{{ url_for('agency_responders') }}">Manage Responders</a></li>
-        <li> <a href="{{ url_for('get_all_emergencies') }}">Manage Emergencies</a></li>
+        <li> <a href="{{ url_for('agency_emergencies') }}">Manage Emergencies</a></li>
+        <li><a href="#reports">Resource Management</a></li>
         <li><a href="#settings">Settings</a></li>
         <li><a href="#reports">Reports</a></li>
-        <li><a href="#reports">Resource Allocation</a></li>
+        <li><a href="#reports">Notifications</a></li>
     </ul>
 </aside>
