--- a/frontend/templates/components/navbar.html
+++ b/frontend/templates/components/navbar.html
@@ -39,6 +39,7 @@
                     <a href="{{ url_for('get_all_emergencies') }}">View Emergencies</a>
                     {% endif %}
                     <a href="{{ url_for('profile') }}">Profile</a>
+                    <a href="{{ url_for('notifications') }}">Notifications</a>
                     <a href="{{ url_for('resources') }}">Resources</a>
                     <a href="{{ url_for('logout') }}">Logout</a>
                 </div>
