--- a/frontend/templates/pages/user/agency/agency-dashboard.html
+++ b/frontend/templates/pages/user/agency/agency-dashboard.html
@@ -12,7 +12,19 @@
         <div class="kpi-cards">
             <div class="kpi-card">
                 <h3>Total Emergencies This Month</h3>
-                <p>20</p>
+                <p>{{ total_emergencies_this_month }}</p>
+            </div>
+            <div class="kpi-card">
+                <h3>Total Emergencies This Year</h3>
+                <p>{{ total_emergencies_this_year }}</p>
+            </div>
+            <div class="kpi-card">
+                <h3>Completed Emergencies This Month</h3>
+                <p>{{ completed_emergencies_this_month }}</p>
+            </div>
+            <div class="kpi-card">
+                <h3>Completed Emergencies This Year</h3>
+                <p>{{ completed_emergencies_this_year }}</p>
             </div>
             <div class="kpi-card">
                 <h3>Average Response Time</h3>
@@ -40,16 +52,22 @@
                     <td>Mo Salah</td>
                     <td>High</td>
                     <td>
-                        <button class="dashboard-btn reassign">Reassign</button>
+                        <button class="btn edit">Assign</button>
                         <form action="" class="reassign-form hide">
+                            {% if responders %}
                             <label for="assignment-reassign">
                                 <select name="responder" id="assignment-reassign">
                                     {% for responder in responders %}
-                                    <option value="{{ responder.id }}">{{ responder.id }}</option>
+                                        {% if responder.status == 'available' %}
+                                        <option value="{{ responder.id }}">{{ responder.user.profile.first_name }} {{ responder.user.profile.last_name }}</option>
+                                        {% endif %}
                                     {% endfor %}
                                 </select>
                             </label>
-                            <input type="submit" value="Reassign">
+                            <input type="submit" value="Assign">
+                            {% else %}
+                            <p>No responders available.</p>
+                            {% endif %}
                         </form>
                     </td>
                 </tr>
@@ -62,15 +80,15 @@
         <div class="kpi-cards">
             <div class="kpi-card">
                 <h3>Total Responders</h3>
-                <p>30</p>
+                <p>{{ total_responders_count }}</p>
             </div>
             <div class="kpi-card">
-                <h3>Active Responders</h3>
-                <p>25</p>
+                <h3>Engaged Responders</h3>
+                <p>{{ engaged_responders_count }}</p>
             </div>
             <div class="kpi-card">
                 <h3>Available Responders</h3>
-                <p>5</p>
+                <p>{{ available_responders_count }}</p>
             </div>
             <div class="kpi-card">
                 <h3>Deployed Vehicles</h3>
@@ -94,21 +112,5 @@
     </div>
 </div>
 
-
-<script>
-    let dashboardButton = document.querySelector('button.reassign');
-    let reasignForm = document.querySelector('form.reassign-form');
-
-    dashboardButton.addEventListener('click', () => {
-        if (reasignForm.classList.contains('hide')) {
-            reasignForm.classList.remove('hide');
-            dashboardButton.innerHTML = 'Cancel';
-            dashboardButton.style.backgroundColor = '#D22626';
-        } else {
-            reasignForm.classList.add('hide');
-            dashboardButton.innerHTML = 'Reassign';
-            dashboardButton.style.backgroundColor = '#FC924B';
-        }
-    });
-</script>
+<script src="{{ url_for('static', path='js/reassignForm.js') }}"></script>
 {% endblock %}
