--- a/frontend/templates/components/base.html
+++ b/frontend/templates/components/base.html
@@ -23,7 +23,7 @@
     </main>
 
     <!-- {% include 'components/footer.html' %} -->
-    
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     {% block script_tags %} {% endblock %}
 </body>
 </html>
