--- a/frontend/templates/pages/user/agency/emergencies.html
+++ b/frontend/templates/pages/user/agency/emergencies.html
@@ -2,7 +2,10 @@
 
 {% block dashboard_content %}
 <div class="dashboard emergencies">
-    <h2>All Emergencies</h2>
+    <header>
+        <h1>All Emergencies</h1>
+    </header>
+    
     <table>
         <thead>
             <tr>
@@ -74,7 +77,10 @@
 </div>
 
 <div class="dashboard emergencies">
-    <h2>Agency Emergencies</h2>
+    <header>
+        <h1>Agency Emergencies</h1>
+    </header>
+
     <table>
         <thead>
             <tr>
