--- a/frontend/templates/pages/user/agency/responders.html
+++ b/frontend/templates/pages/user/agency/responders.html
@@ -2,7 +2,10 @@
 
 {% block dashboard_content %}
 <div class="dashboard responders">
-    <h2>All Responders</h2>
+    <header>
+        <h1>All Responders</h1>
+    </header>
+    
     <table>
         <thead>
             <tr>
