--- a/frontend/templates/components/navbar.html
+++ b/frontend/templates/components/navbar.html
@@ -33,7 +33,7 @@
                 </div>
 
                 <div class="links">
-                    {% if user.role != 'Agency admin' %}
+                    {% if user.role != 'Agency admin' and user.role != 'Responder' %}
                     <a href="{{ url_for('dashboard') }}">Dashboard</a>
                     <a href="{{ url_for('report_emergency') }}">Report Emergency</a>
                     <a href="{{ url_for('get_all_emergencies') }}">View Emergencies</a>
