--- a/frontend/templates/components/navbar.html
+++ b/frontend/templates/components/navbar.html
@@ -4,15 +4,10 @@
     </a>
 
 
-<!-- <img src="https://cdn-icons-png.freepik.com/256/10024/10024438.png?uid=R65046554&ga=GA1.1.2092350398.1730195801&semt=ais_hybrid" alt=""> -->
+<!-- <img src="https://cdn-icons-png.freepik.com/256/10024/10024438.png?uid=R65046554&ga=GA1.1.2092350398.1730195801&semt=ais_hybrid" alt="" class="icon"> -->
 
     <div class="nav-links">
         {% if user %}
-        <!-- <div class="search-bar">
-            <input type="text" placeholder="Search...">
-            <button type="submit"><img src="https://cdn-icons-png.freepik.com/256/16205/16205471.png?uid=R65046554&ga=GA1.1.2092350398.1730195801&semt=ais_hybrid" alt="search" class="icon"></button>
-        </div> -->
-
         <div class="dropdown">
             <div class="button">
                 {% if user.profile.profile_picture %}
