--- a/frontend/templates/pages/user/responder/responder-base.html
+++ b/frontend/templates/pages/user/responder/responder-base.html
@@ -7,8 +7,8 @@
 
 {% block content %}
 <section id="dashboard">
-    <div id="responder-dashboard">
-        {% include 'components/responder-sidebar.html' %}
+    <div id="dashboard-content">
+        {% include 'components/sidebars/responder-sidebar.html' %}
     
         <main class="content">
             {% block dashboard_content %} {% endblock %}
