--- a/frontend/templates/pages/external/resources/emergency-locations.html
+++ b/frontend/templates/pages/external/resources/emergency-locations.html
@@ -1,34 +1,31 @@
-{% extends 'components/base.html' %}
+{% extends 'pages/external/resources/resources-base.html' %}
 
-{% block head_tags %}
-<link rel="stylesheet" href="{{ url_for('static', path='css/resources.css') }}">
-{% endblock %}
+{% block resources_content %}
+<header>
+    <h1>Emergency Locations</h1>
+</header>
 
-{% block content %}
-<section id="resources">
-    <header>
-        <h1>Resources</h1>
-    </header>
+{% include 'components/search-bar.html' %}
 
-    {% include 'components/search-bar.html' %}
-
-    <div class="resource-list">
-        {% if resources %}
-            {% for resource in resources %}
-            <div class="resource-card">
-                <div class="content">
-                    <h1>{{ emojis[resource.event_type | capitalize] }}</h1>
-                    <h3>{{ resource.title }}</h3>
-                    <p>{{ resource.summary }}</p>
-                    <a href="{{ url_for('get_single_resource', url_slug=resource.url_slug) }}" class="btn action">View details</a>
-                </div>
+<div class="resource-list">
+    {% if pagination_data %}
+        {% for location in pagination_data.data %}
+        <div class="resource-card">
+            <div class="card-content">
+                <h3><a href="{{ url_for('get_single_emergency_location', location_id=location.id) }}">{{ location.name }}</a></h3>
+                <p>{{ location.type }}</p>
+                <p>{{ location.city }}, {{ location.state }}</p>
             </div>
-            {% endfor %}
-            {% else %}
-            <p>No resources found</p>
-            {% endif %}
-    </div>
-</section>
+        </div>
+        {% endfor %}
+    {% else %}
+    <p>No emergency locations found</p>
+    {% endif %}
+</div>
+
+<!-- Pagination -->
+{% include 'components/paginator.html' %}
+
 
 <script>
     const searchInput = document.getElementById('search');
